--- a/crypto/nss/HISTORY
+++ b/crypto/nss/HISTORY
@@ -1,3 +1,6 @@
+2014-03-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.15.5
+
 2014-02-04 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.15.4, SECURITY_PATCH=4, CVE-2013-1740
 	  https://developer.mozilla.org/en-US/docs/NSS/NSS_3.15.4_release_notes
