--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-03-05  Ismael Luceno <ismael@sourcemage.org>
+	* utils/nicstat: new spell, Network traffic statics utility for Solaris and Linux
+
 2014-02-27  Treeve Jelbert <treeve@sourcemage.org>
 	* libs/libevdev: new spell, wrapper library for evdev devices
 
