--- a/database/sqlite/HISTORY
+++ b/database/sqlite/HISTORY
@@ -1,3 +1,6 @@
+2014-03-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.8.3.1
+
 2014-02-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.8.3; updated source url
 
