--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-03-05 Vlad Glagolev <stealth@sourcemage.org>
+	* python-pypi/python-ecdsa: new spell, ECDSA cryptographic signature
+	  library
+
 2014-03-05  Ismael Luceno <ismael@sourcemage.org>
 	* utils/nicstat: new spell, Network traffic statics utility for Solaris and Linux
 
