--- a/python-pypi/paramiko/HISTORY
+++ b/python-pypi/paramiko/HISTORY
@@ -1,3 +1,7 @@
+2014-03-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.12.2
+	* DEPENDS: requires python, python-ecdsa
+
 2013-01-08 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.9.0; renewed website and source urls
 	* paramiko.gpg: dropped, not used anymore
