--- a/http/lynx/HISTORY
+++ b/http/lynx/HISTORY
@@ -1,3 +1,6 @@
+2014-03-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.8.8rel1
+
 2012-12-27 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: PATCH_LEVEL -> PATCHLEVEL
 
