--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-03-07  Treeve Jelbert <treeve@sourcemage.org>
+	* devel/extra-cmake-modules: new spell
+
 2014-03-05 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/python-ecdsa: new spell, ECDSA cryptographic signature
 	  library
