--- a/crypto/libssh/HISTORY
+++ b/crypto/libssh/HISTORY
@@ -1,3 +1,6 @@
+2014-03-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.6.3
+
 2014-01-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.6.0
 
