--- a/perl-cpan/mime-base64/HISTORY
+++ b/perl-cpan/mime-base64/HISTORY
@@ -1,3 +1,6 @@
+2014-03-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.14
+
 2012-09-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.13
 
