--- a/python-pypi/markupsafe/HISTORY
+++ b/python-pypi/markupsafe/HISTORY
@@ -1,3 +1,6 @@
+2014-03-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.19
+
 2013-04-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: fix python3 usage
 
