--- a/doc/docutils/HISTORY
+++ b/doc/docutils/HISTORY
@@ -1,3 +1,6 @@
+2014-03-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.11
+
 2013-07-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.10
 
