--- a/python-pypi/pelican/HISTORY
+++ b/python-pypi/pelican/HISTORY
@@ -1,3 +1,6 @@
+2014-03-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.3.0
+
 2013-08-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: depend on python-markdown instead of markdown
 
