--- a/python-pypi/setuptools/HISTORY
+++ b/python-pypi/setuptools/HISTORY
@@ -1,3 +1,6 @@
+2014-03-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.1
+
 2014-02-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.2
 
