--- a/mail/sylpheed/HISTORY
+++ b/mail/sylpheed/HISTORY
@@ -1,3 +1,6 @@
+2014-03-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.3.1
+
 2012-11-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.3.0
 
