--- a/net/fping/HISTORY
+++ b/net/fping/HISTORY
@@ -1,3 +1,6 @@
+2014-03-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.9
+
 2013-11-08 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.8
 
