--- a/editors/elvis/HISTORY
+++ b/editors/elvis/HISTORY
@@ -1,3 +1,6 @@
+2014-03-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: added missing libxt dependency
+
 2012-10-19 Vlad Glagolev <stealth@sourcemage.org>
 	* CONFIGURE: corrected symlink check
 
