--- a/chat-irc/bitlbee/INSTALL
+++ b/chat-irc/bitlbee/INSTALL
@@ -1,19 +1,18 @@
 default_install &&
-# repertory for bitlbee to store personnal datas of each user
+# repertory for bitlbee to store personal datas of each user
 # allow bitlbee to write in by changing owner
-if ! [ -d /var/lib/bitlbee ]; then
-  mkdir /var/lib/bitlbee &&
-  chown nobody.nogroup /var/lib/bitlbee
+if ! [ -d "$INSTALL_ROOT/var/lib/bitlbee" ]; then
+  install -vm 700 -d -o nobody -g nogroup "$INSTALL_ROOT/var/lib/bitlbee"
 fi &&
 
 # default configuration files installation (bitlbee.conf and motd.txt)
 # files removed when dispelled if not modified by user
-if [ -f /etc/bitlbee/bitlbee.conf ]; then
-  echo "A Bitlbee configuration file already exists"
+if [ -f "$INSTALL_ROOT/etc/bitlbee/bitlbee.conf" ]; then
+  message "${MESSAGE_COLOR}Bitlbee configuration file already exists!${DEFAULT_COLOR}"
 else
   make install-etc
 fi
 
-if [[ "$BITLBEE_BITLBEED" == y ]] ; then
-	install utils/bitlbeed /usr/sbin/bitlbeed
+if [[ "$BITLBEE_BITLBEED" == y ]]; then
+  install -vm 755 "utils/bitlbeed" "$INSTALL_ROOT/usr/sbin/bitlbeed"
 fi
