--- a/devel/sparse/HISTORY
+++ b/devel/sparse/HISTORY
@@ -1,3 +1,8 @@
+2014-03-06 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Changed SOURCE_URL[0] extension
+	  Changed verification to hash
+	  updated spell to 0.5.0
+
 2011-01-07 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 0.4.2
 
