--- a/graphics/vym/HISTORY
+++ b/graphics/vym/HISTORY
@@ -1,3 +1,6 @@
+2014-03-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix SOURCE_URL[0]
+
 2012-08-05 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.2.4
 
