--- a/libs/fftw/HISTORY
+++ b/libs/fftw/HISTORY
@@ -1,3 +1,7 @@
+2014-03-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.3.4
+	* *.patch: removed
+
 2013-06-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD, 0001-Fix-the-manual-to-work-with-both-texinfo-4-and-texin.patch:
 	  fix issue with texinfo-5
