--- a/libs/pyqt4/HISTORY
+++ b/libs/pyqt4/HISTORY
@@ -1,3 +1,6 @@
+2014-03-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.10.4
+
 2014-02-24 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.10.3
 	* DEPENDS, BUILD: add python3 support
