--- a/python-pypi/pybindgen/HISTORY
+++ b/python-pypi/pybindgen/HISTORY
@@ -1,3 +1,7 @@
+2014-03-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.17.0, new url
+	*  BUILD, INSTALL: deleted
+
 2013-11-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: PYTHON3
 
