--- a/archive/pbzip2/HISTORY
+++ b/archive/pbzip2/HISTORY
@@ -1,3 +1,6 @@
+2014-03-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.8
+
 2011-11-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.6
 
