--- a/net/socat/HISTORY
+++ b/net/socat/HISTORY
@@ -1,3 +1,6 @@
+2014-03-17 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.7.2.4
+
 2014-01-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.7.2.3; SECURITY_PATCH++ (CVE-2014-0019)
 
