--- a/xorg-lib/libfs/HISTORY
+++ b/xorg-lib/libfs/HISTORY
@@ -1,3 +1,6 @@
+2014-03-18 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.6
+
 2012-03-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.4
 
