--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2014-03-18 Treeve Jelbert <treeve@sourcemage.org>
 	* xorg-app/xcb-util-cursor: new spell
+	* xorg-lib/libinput: new spell, generic input library
 
 2014-03-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* spelling/goldendict: new spell, a meta-dictionary
