--- a/libs/libevdev/HISTORY
+++ b/libs/libevdev/HISTORY
@@ -1,3 +1,6 @@
+2014-03-18 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.1
+
 2014-02-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0
 	  spell created
