--- a/xorg-lib/libxcb/HISTORY
+++ b/xorg-lib/libxcb/HISTORY
@@ -1,3 +1,6 @@
+2014-03-18 Treeve Jelbert <treeve@sourcemage.org>
+	* PRE_BUILD: fix detection of python3.4
+
 2013-12-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.10
 
