--- a/audio-plugins/swh-plugins/HISTORY
+++ b/audio-plugins/swh-plugins/HISTORY
@@ -1,3 +1,6 @@
+2014-03-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* swh-plugins-nosetlocale.patch: add missing file
+
 2013-09-10 Robin Cook <rcook@wyrms.net>
 	* PRE_BUILD: added patch to remove setlocale calls
 	  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=672705
