--- a/disk/libisoburn/HISTORY
+++ b/disk/libisoburn/HISTORY
@@ -1,3 +1,6 @@
+2014-03-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.6.pl01
+
 2014-03-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.3.6
 
