--- a/kde4-support/libdbusmenu-qt/HISTORY
+++ b/kde4-support/libdbusmenu-qt/HISTORY
@@ -1,3 +1,7 @@
+2014-03-18 Treeve Jelbert <treeve@sourcemage.org>
+        * DETAILS: version 0.9.3
+          specify no-check-certificates
+
 2014-02-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: PATCHLEVEL +++
 	  new WEBSITE
