--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,10 @@
+2014-03-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 28.0
+	* DETAILS, PREPARE: removed support for cvs version since there hasn't been
+	  one in quite some time
+	* glyph.patch, PRE_BUILD: removed patch that does not apply anymore
+	* DEPENDS: added optional dependency on pulseaudio
+
 2014-02-27 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: optional depends gstreamer
 
