--- a/audio-plugins/blop/HISTORY
+++ b/audio-plugins/blop/HISTORY
@@ -1,3 +1,6 @@
+2014-03-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix SOURCE_URL[0]
+
 2007-02-16 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: Edited long description.
 
