--- a/audio-drivers/jack2/HISTORY
+++ b/audio-drivers/jack2/HISTORY
@@ -1,5 +1,6 @@
 2014-03-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD: fix build error due to incompatibility with waf_build
+	* DEPENDS: add dependency on dbus-python
 
 2014-02-01 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: use official url instead of dropbox
