--- a/gnome2-libs/gsettings-desktop-schemas/HISTORY
+++ b/gnome2-libs/gsettings-desktop-schemas/HISTORY
@@ -1,3 +1,6 @@
+2014-03-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.11.5
+
 2013-11-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.10.1
 
