--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2014-03-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* audio-plugins/rt-plugins: new spell, a set of LADSPA plugins for
 	  crossover and equalization of active speakers
+	* audio-drivers/ngjackspa: new spell, a set of tools for using
+	  LADSPA plugins from jack
 
 2014-03-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* dave_robillard.gpg: add key 29727060
