--- a/database/dbd-firebird/HISTORY
+++ b/database/dbd-firebird/HISTORY
@@ -1,3 +1,6 @@
+2014-03-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.18
+
 2013-12-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.16
 
