--- a/utils/youtube-dl/HISTORY
+++ b/utils/youtube-dl/HISTORY
@@ -1,3 +1,6 @@
+2014-03-20 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2014.03.18.1
+
 2013-09-25 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 2013.09.24.2
 
