--- a/ftp/lftp/HISTORY
+++ b/ftp/lftp/HISTORY
@@ -1,3 +1,6 @@
+2014-03-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 4.4.15
+
 2012-09-29 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.4.0
 
