--- a/kernels/schedtool/HISTORY
+++ b/kernels/schedtool/HISTORY
@@ -1,3 +1,11 @@
+2014-03-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* BUILD: use default_build_make
+	* DETAILS: version 1.3.0
+	* 0001-clean-up-Makefile.patch, INSTALL, PRE_BUILD: install to
+	  correct location
+
+no changes added to commit (use "git add" and/or "git commit -a")
+
 2009-10-31 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: updated spell to 1.2.9
 
