--- a/database/postgresql/HISTORY
+++ b/database/postgresql/HISTORY
@@ -1,3 +1,6 @@
+2014-03-21 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 9.3.4
+
 2014-03-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 9.3.3; SECURITY_PATCH++ (several CVEs)
 
