--- a/audio-plugins/fil-plugins/HISTORY
+++ b/audio-plugins/fil-plugins/HISTORY
@@ -1,3 +1,6 @@
+2014-03-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix WEB_SITE and SOURCE_URL[0], version 0.3.0
+
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: changed dependency on g++ to dependency on gcc with
 	  sub-depends on CXX (scripted)
