--- a/audio-plugins/rev-plugins/HISTORY
+++ b/audio-plugins/rev-plugins/HISTORY
@@ -1,3 +1,7 @@
+2014-03-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.7.1
+	* BUILD: use default_build_make
+
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: changed dependency on g++ to dependency on gcc with
 	  sub-depends on CXX (scripted)
