--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2014-03-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* audio-plugins/vlevel: new spell, a compressor with lookahead for LADSPA
+	* audio-libs/zita-resampler: new spell, a library for high-quality
+	  resampling
 
 2014-03-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* audio-plugins/rt-plugins: new spell, a set of LADSPA plugins for
