--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	* audio-plugins/vlevel: new spell, a compressor with lookahead for LADSPA
 	* audio-libs/zita-resampler: new spell, a library for high-quality
 	  resampling
+	* audio-libs/zita-alsa-pcmi: new spell, a C++ wrapper for ALSA PCM devices
 
 2014-03-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* audio-plugins/rt-plugins: new spell, a set of LADSPA plugins for
