--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 	* audio-libs/zita-resampler: new spell, a library for high-quality
 	  resampling
 	* audio-libs/zita-alsa-pcmi: new spell, a C++ wrapper for ALSA PCM devices
+	* audio-plugins/zita-ajbridge: new spell, a zita-alsa-pcmi based bridge
+	  between ALSA and jack
 
 2014-03-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* audio-plugins/rt-plugins: new spell, a set of LADSPA plugins for
