--- a/audio-plugins/caps-plugins/HISTORY
+++ b/audio-plugins/caps-plugins/HISTORY
@@ -1,3 +1,7 @@
+2014-03-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.9.23
+	* BUILD: use default_build_make
+
 2011-09-20 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: update to 0.4.5
 
