--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-03-22  Treeve Jelbert <treeve@sourcemage.org>
+	* python-pypi/rbtools: new spell, tools for ReviewBoard
+
 2014-03-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* audio-plugins/vlevel: new spell, a compressor with lookahead for LADSPA
 	* audio-libs/zita-resampler: new spell, a library for high-quality
