--- a/audio-drivers/jack/HISTORY
+++ b/audio-drivers/jack/HISTORY
@@ -1,3 +1,8 @@
+2014-03-23 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.124.1
+	* DEPENDS: add optional dependencies on zita-alsa-pcmi and libffado
+	* jslist.patch, PRE_BUILD: remove obsolete patch
+
 2014-02-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* PRE_BUILD: apply patch
