--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2014-03-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* info/patches/maintenance_patches_3/patch-3.13.7: added
+	* latest_defaults: version 3.13.7
+
 2014-03-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* info/patches/maintenance_patches_3/patch-3.13.6: added
 	* latest_defaults: version 3.13.6
