--- a/audio-creation/ecasound/HISTORY
+++ b/audio-creation/ecasound/HISTORY
@@ -1,3 +1,6 @@
+2014-03-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.9.1
+
 2011-10-04 Bor Kraljič <pyrobor@ver.si>
 	* DEPENDS: removed optional dependency on arts
 
