--- a/gnome2-libs/hicolor-icon-theme/HISTORY
+++ b/gnome2-libs/hicolor-icon-theme/HISTORY
@@ -1,3 +1,6 @@
+2014-03-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.13
+
 2010-02-28 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: updated spell to 0.12
 
