--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2014-03-24  Treeve Jelbert <treeve@sourcemage.org>
 	* hicolor-icon-theme: move to desktop-themes
+	* oxygen-icons: move to desktop-themes
 
 2014-03-24 Vlad Glagolev <stealth@sourcemage.org>
 	* mail/smtpc: new spell, test smtp client
