--- a/desktop-themes/oxygen-icons/HISTORY
+++ b/desktop-themes/oxygen-icons/HISTORY
@@ -1,3 +1,7 @@
+2014-03-24 Treeve Jelbert <treeve@sourcemage.org> 
+	* BUILD: add, nolonger part of kde
+	* CONFIGURE: deleted
+
 2013-12-28 Treeve Jelbert <treeve@sourcemage.org> 
 	* DETAILS: version 4.12.0
 
