--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
 2014-03-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* audio-plugins/calf-plugins: new spell, professional-grade audio plugins
 	  for jack
+	* audio-libs/stk: new spell, the synthesis toolkit in C++
 
 2014-03-22  Treeve Jelbert <treeve@sourcemage.org>
 	* python-pypi/rbtools: new spell, tools for ReviewBoard
