--- a/audio-libs/liblo/HISTORY
+++ b/audio-libs/liblo/HISTORY
@@ -1,3 +1,6 @@
+2014-03-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.28
+
 2014-01-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.27
 
