--- a/libs/raptor/HISTORY
+++ b/libs/raptor/HISTORY
@@ -1,3 +1,6 @@
+2014-03-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.0.13
+
 2013-12-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.0.12
 
