--- a/audio-libs/aubio/HISTORY
+++ b/audio-libs/aubio/HISTORY
@@ -1,2 +1,8 @@
+2014-03-24 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS, DEPENDS: version 0.4.1
+	* BUILD, INSTALL: use waf
+	* 0001-disable-tests.patch, PRE_BUILD: don't build tests as they
+	  fail to link
+
 2008-07-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS, DETAILS: spell created
