--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-03-25 Ismael Luceno <ismael@sourcemage.org>
+	* editors/vimoutliner: new spell, Outline processor designed for
+	  lightning fast authoring
+
 2014-03-24  Treeve Jelbert <treeve@sourcemage.org>
 	* hicolor-icon-theme: move to desktop-themes
 	* oxygen-icons: move to desktop-themes
