--- a/net/gigolo/HISTORY
+++ b/net/gigolo/HISTORY
@@ -1,3 +1,8 @@
+2014-03-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.4.2
+	* DEPENDS: added gettext optional dependency
+	* PRE_BUILD: dropped
+
 2010-08-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.4.1
 
