--- a/graphics/optipng/HISTORY
+++ b/graphics/optipng/HISTORY
@@ -1,3 +1,6 @@
+2014-03-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.7.5
+
 2012-11-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.7.4; SECURITY_PATCH++
 
