--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,3 +1,7 @@
+2014-01-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.4
+	* llvm.gpg: add key BB5A0569: "Bill Wendling <void@llvm.org>"
+
 2013-06-20 Pol Vinogradov <vin.public@gmail.com>
 	* PRE_BUILD, Tools.cpp.patch: corrected clang directory, readded
 	  slightly modified Tools.cpp patch
