--- a/graphics/fontforge/HISTORY
+++ b/graphics/fontforge/HISTORY
@@ -1,3 +1,9 @@
+204-03-26 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 20120731-b
+	* BUILD: deleted
+	* PRE_BUILD: do not apply patch
+	* fontforge_python.patch: deleted
+
 2010-11-03 Ladislav Hagara <hgr@vabo.cz>
 	* DEPENDS: jpeg -> JPEG
 
