--- a/audio-creation/jack-rack/HISTORY
+++ b/audio-creation/jack-rack/HISTORY
@@ -1,3 +1,7 @@
+2014-03-27 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix SOURCE_URL[0]
+	* BUILD: fix linking
+
 2011-09-26 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: converted to upstream signature checking
 	* B94D2E95.gpg: added gpg keyring
