--- a/net/monit/HISTORY
+++ b/net/monit/HISTORY
@@ -1,3 +1,6 @@
+2014-03-28 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.8
+
 2014-02-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.7
 
