--- a/chat-irc/znc/HISTORY
+++ b/chat-irc/znc/HISTORY
@@ -1,3 +1,6 @@
+2014-03-29 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.2; SECURITY_PATCH++ (CVE-2013-2130)
+
 2013-03-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.0
 	* DEPENDS: renewed dependencies and flags
