--- a/xorg-util/util-macros/HISTORY
+++ b/xorg-util/util-macros/HISTORY
@@ -1,3 +1,6 @@
+2014-03-29  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.19.0
+
 2013-12-04  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.18.0
 
