--- a/xorg-app/xrandr/HISTORY
+++ b/xorg-app/xrandr/HISTORY
@@ -1,3 +1,6 @@
+2014-03-29  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.4.2
+
 2013-07-17  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.4.1
 
