--- a/printer/cups-filters/HISTORY
+++ b/printer/cups-filters/HISTORY
@@ -1,3 +1,6 @@
+2014-03-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.50
+
 2014-03-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.48
 
