--- a/libs/gmp/HISTORY
+++ b/libs/gmp/HISTORY
@@ -1,3 +1,6 @@
+2014-03-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 6.0.0a
+
 2013-10-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.1.3 (devel)
 
