--- a/http/apache22/HISTORY
+++ b/http/apache22/HISTORY
@@ -1,3 +1,7 @@
+2014-03-28 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.2.27; SECURITY_PATCH++ (CVE-2013-6438,
+	  CVE-2014-0098)
+
 2014-02-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.2.26; added archive site for source urls
 
