--- a/python-pypi/mercurial/HISTORY
+++ b/python-pypi/mercurial/HISTORY
@@ -1,3 +1,6 @@
+2014-04-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: updated to 2.9.2
+
 2014-03-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: updated to 2.9.1
 
