--- a/utils/grep/HISTORY
+++ b/utils/grep/HISTORY
@@ -1,3 +1,6 @@
+2014-04-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.18
+
 2014-01-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.16
 
