--- a/haskell/haskell-git-annex/HISTORY
+++ b/haskell/haskell-git-annex/HISTORY
@@ -1,3 +1,6 @@
+2014-04-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 5.20140403
+
 2014-03-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 5.20140320
 
