--- a/archive-libs/zlib/HISTORY
+++ b/archive-libs/zlib/HISTORY
@@ -1,3 +1,6 @@
+2014-04-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.2.8
+
 2012-05-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.2.7; quoting paths
 	* BUILD: removed obsolete rm commands
