--- a/haskell/haskell-cryptohash/HISTORY
+++ b/haskell/haskell-cryptohash/HISTORY
@@ -1,3 +1,6 @@
+2014-05-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.11.4
+
 2014-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.11.2
 
