--- a/haskell/haskell-dlist/HISTORY
+++ b/haskell/haskell-dlist/HISTORY
@@ -1,3 +1,6 @@
+2014-05-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.7.0.1
+
 2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.6.0.1
 
