--- a/haskell/haskell-polyparse/HISTORY
+++ b/haskell/haskell-polyparse/HISTORY
@@ -1,3 +1,6 @@
+2014-05-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.9
+
 2012-05-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, DETAILS: spell created
 
