--- a/editors/moe/HISTORY
+++ b/editors/moe/HISTORY
@@ -1,3 +1,6 @@
+2014-05-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.5
+
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: changed dependency on g++ to dependency on gcc with
 	  sub-depends on CXX (scripted)
