--- a/python-pypi/mercurial/HISTORY
+++ b/python-pypi/mercurial/HISTORY
@@ -1,3 +1,6 @@
+2014-05-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.0
+
 2014-04-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: updated to 2.9.2
 
