--- a/net/minidlna/HISTORY
+++ b/net/minidlna/HISTORY
@@ -1,3 +1,6 @@
+2014-05-05 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.1.2
+
 2013-12-07 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Fixed SOURCE_URL[0]
 	  updated spell to 1.1.1
