--- a/haskell/haskell-transformers/HISTORY
+++ b/haskell/haskell-transformers/HISTORY
@@ -1,3 +1,6 @@
+2014-05-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.4.0.0
+
 2012-05-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.3.0.0
 
