--- a/haskell/haskell-network/HISTORY
+++ b/haskell/haskell-network/HISTORY
@@ -1,3 +1,6 @@
+2014-05-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.5.0.0
+
 2014-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.4.2.2
 
