--- a/haskell/haskell-quickcheck/HISTORY
+++ b/haskell/haskell-quickcheck/HISTORY
@@ -1,3 +1,7 @@
+2014-05-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.7.3
+	* DEPENDS: depend on haskell-tf-random
+
 2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.6
 
