--- a/haskell/haskell-uuid/HISTORY
+++ b/haskell/haskell-uuid/HISTORY
@@ -1,3 +1,6 @@
+2014-05-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix WEB_SITE
+
 2014-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS, DEPENDS: version 1.3.3
 
