--- a/net/openswan/HISTORY
+++ b/net/openswan/HISTORY
@@ -1,3 +1,6 @@
+2014-05-06 Vlad Glagolev <stealth@sourcemage.org>
+	* CONFLICTS: added, conflicts with new libreswan spell
+
 2013-10-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.6.39; SECURITY_PATCH++ (CVE-2013-2053)
 	* openswan.gpg: added 9FC816CA public key (Openswan Master Signing Key
