--- a/utils/dbus/HISTORY
+++ b/utils/dbus/HISTORY
@@ -1,3 +1,6 @@
+2014-05-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.8.2
+
 2014-01-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.8.0
 
