--- a/devel/cppcheck/HISTORY
+++ b/devel/cppcheck/HISTORY
@@ -1,3 +1,6 @@
+2014-05-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.64
+
 2014-01-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.63
 	* INSTALL, BUILD: install cfg files necessary for using cppcheck
