--- a/xorg-driver/xf86-input-evdev/HISTORY
+++ b/xorg-driver/xf86-input-evdev/HISTORY
@@ -1,3 +1,6 @@
+2014-05-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.8.4
+
 2014-04-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.8.3
 
