--- a/disk/cdrtools/HISTORY
+++ b/disk/cdrtools/HISTORY
@@ -1,3 +1,6 @@
+2014-05-08 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 3.01a23
+
 2013-04-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.01a14
 
