--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,9 @@
 	  haskell build facilities]
 	* wm-addons/xmonad-contrib: moved to haskell/haskell-xmonad-contrib
 
+2014-05-08  Treeve Jelbert <treeve@sourcemage.org>
+	* groups: kde5 => plasma
+
 2014-05-06 Vlad Glagolev <stealth@sourcemage.org>
 	* net/libreswan: new spell, IPsec implementation for Linux - Openswan
 	  fork
