--- a/editors/vim/HISTORY
+++ b/editors/vim/HISTORY
@@ -1,3 +1,6 @@
+2014-05-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS, PRE_BUILD: apply upstream patches 7.4.001 to 7.4.282
+
 2014-02-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS, PRE_BUILD: apply upstream patches 7.4.001 to 7.4.183
 	* vim-patches-tarball: adapted to current version
