--- a/libs/ldns/HISTORY
+++ b/libs/ldns/HISTORY
@@ -1,3 +1,6 @@
+2014-05-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.6.17
+
 2012-11-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.6.16
 
