--- a/fonts-x11/terminus-font/HISTORY
+++ b/fonts-x11/terminus-font/HISTORY
@@ -1,3 +1,6 @@
+2014-05-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.39
+
 2013-06-24 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS: Proper download link
 
