--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,5 +1,6 @@
 2014-05-09 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS, PRE_BUILD: version 3.4.1
+	* PRE_BUILD, gcc-4.9.patch: fix error when using gcc 4.9's stdlib
 
 2014-03-26 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: SOURCE3 was updated to upstream
