--- a/graphics-libs/mesalib-1x/HISTORY
+++ b/graphics-libs/mesalib-1x/HISTORY
@@ -1,3 +1,6 @@
+2014-15-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 10.1.3
+
 2014-14-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 10.1.1
 
