--- a/ftp/imapsync/HISTORY
+++ b/ftp/imapsync/HISTORY
@@ -1,3 +1,7 @@
+2014-05-10 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 1.584
+
 2011-09-26 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap
 
