--- a/perl-cpan/date-manip/HISTORY
+++ b/perl-cpan/date-manip/HISTORY
@@ -1,3 +1,6 @@
+2014-05-10 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 6.43
+
 2013-03-09 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 6.39
 
