--- a/perl-cpan/mail-imapclient/HISTORY
+++ b/perl-cpan/mail-imapclient/HISTORY
@@ -1,3 +1,7 @@
+2014-05-10 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 3.35
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
