--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2014-05-10  Ismael Luceno <ismael@sourcemage.org>
+	* mail/isync: new spell, IMAP and MailDir mailbox synchronizer
+
+2014-05-10  Ismael Luceno <ismael@sourcemage.org>
 	* perl-cpan/file-copy-recursive: new spell, Perl extension for recursively copying files and directories
 
 2014-05-10 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
