--- a/mail/getmail/HISTORY
+++ b/mail/getmail/HISTORY
@@ -1,3 +1,6 @@
+2014-05-10 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 4.46.0
+
 2011-07-17 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.20.4
 
