--- a/shell-term-fm/rxvt-unicode/HISTORY
+++ b/shell-term-fm/rxvt-unicode/HISTORY
@@ -1,3 +1,6 @@
+2014-05-11 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETILA: version 9.20
+
 2013-11-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 9.19
 	* PRE_BUILD, fix-tabber-perl-5.18-ext.diff: removed
