--- a/mail/masqmail/HISTORY
+++ b/mail/masqmail/HISTORY
@@ -1,3 +1,9 @@
+2014-05-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL+=1
+	* PRE_BUILD: added, to apply log patch and prevent a log dir from
+	  installing
+	* log.patch: added, to fix empty log file creation
+
 2012-12-09 Vlad Glagolev <stealth@sourcemage.org>
 	* CONFLICTS: added msmtp
 
