--- a/libs/libyaml/HISTORY
+++ b/libs/libyaml/HISTORY
@@ -1,3 +1,6 @@
+2014-05-11 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.1.6
+
 2012-04-17 David Kowis<dkowis@shlrm.org>
 	* DETAILS,HISTORY: created libyaml spell
 
