--- a/antivirus/clamav/HISTORY
+++ b/antivirus/clamav/HISTORY
@@ -1,3 +1,6 @@
+2014-05-11 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.98.3
+
 2014-01-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.98.1
 
