--- a/video/xbmc/HISTORY
+++ b/video/xbmc/HISTORY
@@ -1,3 +1,6 @@
+2014-05-11 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 13.0_r2 Gotham
+
 2013-10-26 Jeremy Blosser <jblosser@sourcemage.org>
 	* DETAILS, DEPENDS: version 12.2
 
