--- a/net/tinc/HISTORY
+++ b/net/tinc/HISTORY
@@ -1,3 +1,6 @@
+2014-05-12 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.0.24
+
 2013-10-21 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.0.23; don't do useless doc'ing
 
